deployments/istio-manifests/grpc-gateway.yaml
# Source: ms-sample/templates/ingress-grpc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grpc-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "*"
    port:
      name: grpc
      number: 443
      protocol: HTTP      
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ingress-grpc
spec:
  hosts:
    - "*"
  gateways:
    - grpc-gateway
  http:
    - match:
      - uri:
          prefix: /pb.Add
      route:
      - destination:
          host: add
          port:
            number: 8000
    - match:
      - uri:
          prefix: /pb.Count
      route:
      - destination:
          host: count
          port:
            number: 8000
