deployments/istio-manifests/http-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: http-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ingress-http
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway
  http:
  - match:
    - uri:
        prefix: /api/v1/add/
    rewrite:
      uri: /
    route:
      - destination:
          host: add
          port:
            number: 80
  - match:
    - uri:
        prefix: /api/v1/count/
    rewrite:
      uri: /
    route:
      - destination:
          host: count
          port:
            number: 80
